src/test/ui/issues/issue-57362-1.stderr
error[E0599]: no method named `f` found for fn pointer `fn(&u8)` in the current scope
  --> $DIR/issue-57362-1.rs:20:7
   |
LL | trait Trait {
   | ----------- `Trait` defines an item `f`
...
LL |     a.f();
   |       ^ method not found in `fn(&u8)`
   |
   = note: `a` is a function, perhaps you wish to call it
   = help: items from traits can only be used if the trait is implemented and in scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
